Bug 1568169 - Remove SourceListener from window listener in all gUM failure paths. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D47901

--HG--
extra : moz-landing-system : lando